# genetic-algorithms

./: .gitignore  README.md
MyEval/: Eval.h
assignment4/: CMakeLists.txt  Makefile  visualize.py
assignment4/include/: TSPManager.h  const.h  evaluate.h  ga.h  individual.h  population.h  random.h  utils.h
assignment4/src/: TSPManager.cpp  evaluate.cpp  ga.cpp  individual.cpp  population.cpp  random.cpp  utils.cpp
twitter-subset-selection/: CMakeLists.txt  README.md  social_v_genuine_all_features.arff  traditional_v_genuine_all_features.arff
twitter-subset-selection/graph/: berlin_plot.gnuplot  burma_plot.gnuplot  eli51_plot.gnuplot  lin105_plot.gnuplot
twitter-subset-selection/in/: burma14.tsp  eil51.tsp
twitter-subset-selection/in/solution/: berlin52.opt.tour  burma14.opt.tour  eil51.opt.tour  eil76.opt.tour  lin105.opt.tour  lin318.opt.tour
twitter-subset-selection/include/: Evaluator.h  GA.h  Individual.h  Logger.h  Population.h  Timer.h  Utils.h  config.h
twitter-subset-selection/run_outs/: nohup.out  run_all.py  run_all.sh  run_back_half.sh  run_expanded.sh
twitter-subset-selection/run_outs/SVG/: J48.out  SVM_LINEAR.out  SVM_RBF.out
twitter-subset-selection/run_outs/TVG/: J48.out  SVM_LINEAR.out  SVM_RBF.out
twitter-subset-selection/run_outs/final/: bayes.out  decision_tree.out  neural_net.out  part.out  random_forest.out  random_tree.out
twitter-subset-selection/run_outs/final_NSGA/: bayes.out  decision_tree.out  neural_net.out  nohup.out  part.out  random_forest.out  random_tree.out
twitter-subset-selection/run_outs/final_expanded/: bayes.out  decision_tree.out  neural_net.out  part.out  random_forest.out  random_tree.out
twitter-subset-selection/src/: Evaluator.cpp  GA.cpp  Individual.cpp  Logger.cpp  PlotData.py  Population.cpp  Timer.cpp  Utils.cpp  config.cpp  main.cpp
twitter-subset-selection/weka_social_temp/bayes/: BayesianNet-0.010-0.950.tsv  BayesianNet-0.010-0.950_NSGA.tsv  BayesianNetwork_NSGA_LastGen.tsv
twitter-subset-selection/weka_social_temp/decision_tree/: DecisionTable-0.010-0.950.tsv  DecisionTable-0.010-0.950_NSGA.tsv  DecisionTree_NSGA_LastGen.tsv
twitter-subset-selection/weka_social_temp/part/: Part-0.010-0.950.tsv  Part-0.010-0.950_NSGA.tsv  PartitionTable_NSGA_LastGen.tsv
twitter-subset-selection/weka_social_temp/random_forest/: RandomForest-0.010-0.950.tsv  RandomForest-0.010-0.950_NSGA.tsv  RandomForest_NSGA_LastGen.tsv
twitter-subset-selection/weka_social_temp/random_tree/: RandomTree-0.010-0.950.tsv  RandomTree-0.010-0.950_NSGA.tsv  RandomTree_NSGA_lastGen.tsv
twitter-subset-selection/weka_temp/: Bayesian_plot.gnuplot
twitter-subset-selection/weka_temp/bayes/: BayesianNSGA_plot.gnuplot  BayesianNet-0.001-0.200.tsv  BayesianNet-0.001-0.200_NSGA.tsv  BayesianNet-0.001-0.670.tsv  BayesianNet-0.010-0.950.tsv  BayesianNet-0.010-0.950_NSGA.tsv  BayesianNet_NSGA_LastGen.tsv  Bayesian_plot.gnuplot
twitter-subset-selection/weka_temp/decision_tree/: DecisionTable-0.001-0.670.tsv  DecisionTable-0.010-0.950.tsv  (+3 more)
(+2255 files in other folders)
